--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "proyecto:build:production",
+            "firebaseProject": "cleawei-335fb",
+            "firebaseHostingSite": "cleawei-335fb"
+          }
         }
       }
     }
